Configure lint to check everything except preview features